--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "google-messenger-silicon",
+  "name": "gemini-silicon",
   "private": true,
   "version": "0.1.0",
   "type": "module",
