--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "google-messenger-silicon"
+name = "gemini-silicon"
 version = "0.1.0"
-description = "A highly optimized, lightweight Tauri wrapper for Google Messages"
+description = "A highly optimized, lightweight Tauri wrapper for Google Gemini"
 authors = ["anongecko"]
 license = "CC0-1.0"
 repository = ""
@@ -9,11 +9,11 @@ edition = "2021"
 rust-version = "1.88"
 
 [build-dependencies]
-tauri-build = { version = "2.0.0-beta", features = [] }
+tauri-build = { version = "2.5.2", features = [] }
 
 [dependencies]
-tauri = { version = "2.0.0-beta", features = ["wry"], default-features = false }
-tauri-plugin-opener = "2.0.0-beta"
+tauri = { version = "2.5.2", features = ["wry"], default-features = false }
+tauri-plugin-opener = "2.5.2"
 serde_json = "1.0"
 
 [target.'cfg(target_os = "macos")'.dependencies]
